<resources>
    <string name="app_name">FoodTrack</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>