<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:text="@string/create_account"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <EditText android:hint="@string/name"  android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <EditText android:hint="@string/email"  android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <EditText android:hint="@string/password"  android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <Button
        android:text="@string/register"
        android:backgroundTint="@color/primary"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
</LinearLayout>
