<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/welcome_back"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <EditText
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:text="@string/login"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:text="@string/continue_as_guest"
        android:textColor="@color/secondary"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
</LinearLayout>
